infrastructure/argocd/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-http-ingress
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "10"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  labels:
    app.kubernetes.io/part-of: belovr-platform
spec:
  ingressClassName: traefik
  rules:
    - host: argocd.lab.belovr.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: http
  tls:
    - hosts:
        - argocd.lab.belovr.com
      secretName: lab-tls-secret
